--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+    <div class="preloader">
+        <img src="preloader.gif" alt="preloader" class="preloader-item">
+    </div>
+
+    <header>
+        <video controls muted autoplay loop class="video-container">
+            <source src="video.mp4" type="video/mp4">
+        </video>
+    </header>
+
     <script src="script.js"></script>
 </body>
 </html>
