--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <video controls muted autoplay loop class="video-container">
             <source src="video.mp4" type="video/mp4">
         </video>
+        <h1>Video Project</h1>
+
+        <button class="switch-btn">
+            <span>
+                play
+            </span>
+            <span>
+                pause
+            </span>
+            <span class="switch"></span>
+        </button>
     </header>
 
     <script src="script.js"></script>
